samples/_failures_safe/1761188221_2bc1bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b03bce64.c: In function ‘main’:
./samples/SAFE/__tmp_b03bce64.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
